# ml-micro-arc-sample

./: .gitignore  README.md
ml-abs/: README.md  pyproject.toml
ml-abs/ml_abs/: __init__.py
ml-abs/ml_abs/methods/: __init__.py
ml-abs/ml_abs/model/: __init__.py
ml-abs/ml_abs/pipeline/: __init__.py
ml-abs/ml_abs/processing/: __init__.py
ml-abs/ml_abs/utilities/: data_loader.py
ml-fraud/: pyproject.toml  venv
ml-fraud/ml_fraud/method/: __init__.py
ml-fraud/ml_fraud/preprocessing/: __init__.py
ml-fraud/ml_fraud/utilities/: __init__.py
ml-image/: README.md  pyproject.toml
ml-service/: .env.dev  alembic.ini  alembic.ini.mv  pyproject.toml
ml-service/app/: __init__.py  database.py
ml-service/app/model/db/: __init__.py
ml-service/app/routers/: fraud.py  image.py
ml-service/migration/: env.py
ml-service/migration/versions/: 0fb4332d7ee9_create_a_baseline_migrations.py
