[tool.poetry]
name = "ml-fraud"
version = "0.1.0"
description = "Sample extend lib from ml-abse for fraud case"
authors = ["hendri karisma <situkangsayur@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_fraud"}]

[tool.poetry.dependencies]
python = ">=3.9, <=3.11"
tensorflow = "^2.13.0"
nvidia-cudnn-cu11 = "8.6.0.163"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
pydantic = "^2.3.0"
ml-abs = {path = "../ml-abs/dist/ml_abs-0.1.0-py3-none-any.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
