[tool.poetry]
name = "ml-image"
version = "0.1.0"
description = "Sample extend library for image case"
authors = ["hendri karisma <situkangsayur@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_image"}]

[tool.poetry.dependencies]
python = ">=3.9, <=3.11"
ml-abs = {path = "../ml-abs/dist/ml_abs-0.1.0-py3-none-any.whl"}
tensorflow = "^2.13.0"
nvidia-cudnn-cu11 = "8.6.0.163"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
numpy = "^1.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
